--- a/index.html
+++ b/index.html
@@ -2,114 +2,251 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Fancy Gift List</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Interactive Gift List</title>
+<script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
 <style>
-html,body{margin:0;padding:0;overflow:hidden;font-family:sans-serif;}
-canvas{display:block;position:fixed;top:0;left:0;width:100%;height:100%;z-index:-2;}
-.container{
-  position:relative; z-index:1; max-width:600px; margin:80px auto; padding:40px;
-  background: rgba(255,255,255,0.95); border-radius:20px;
-  box-shadow:0 20px 60px rgba(0,0,0,0.3); backdrop-filter:blur(8px);
+/* Reset */
+* {margin:0; padding:0; box-sizing:border-box; font-family: 'Segoe UI', sans-serif;}
+
+/* Fullscreen background canvas */
+body, html {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: #111;
 }
-h1{text-align:center;margin-bottom:30px;}
-.input-area{display:flex; gap:10px; margin-bottom:20px;}
-input{flex:1;padding:12px 15px; border-radius:12px; border:2px solid #d2691e; outline:none;}
-input:focus{border-color:#ff8c42;box-shadow:0 0 15px rgba(255,140,66,0.3);}
-button{padding:12px 20px;border:none;border-radius:12px;background:linear-gradient(135deg,#d2691e,#ff8c42);color:white;font-weight:600;cursor:pointer;}
-ul{list-style:none;padding:0;margin:0;}
-li{display:flex;justify-content:space-between;align-items:center;margin:10px 0;padding:12px 18px;border-radius:15px;background:linear-gradient(135deg,#fff8f0,#ffe4c4);transition:0.4s;box-shadow:0 5px 15px rgba(0,0,0,0.1);}
-li:hover{transform:translateX(8px) scale(1.03);box-shadow:0 8px 25px rgba(0,0,0,0.2);}
-li a{flex:1;text-decoration:none;color:#d2691e;}
-li a:hover{color:#ff8c42;}
-li button{background:transparent;border:none;color:#d2691e;font-weight:bold;cursor:pointer;transition:0.2s;}
-li button:hover{color:#ff8c42;transform:scale(1.2);}
+
+/* Glass gift panel */
+.gift-panel {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  backdrop-filter: blur(10px);
+  background: rgba(255,255,255,0.05);
+  border-radius: 20px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+  padding: 30px;
+  width: 90%;
+  max-width: 400px;
+  color: #fff;
+  z-index: 10;
+}
+
+/* Floating title */
+.gift-panel h1 {
+  text-align: center;
+  font-size: 2em;
+  margin-bottom: 20px;
+  animation: floatTitle 3s ease-in-out infinite alternate;
+}
+
+@keyframes floatTitle {
+  0% {transform: translateY(0);}
+  100% {transform: translateY(-10px);}
+}
+
+/* Input form */
+form {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+input[type="text"] {
+  flex: 1;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  background: rgba(255,255,255,0.1);
+  color: #fff;
+}
+
+input::placeholder {color: #ddd;}
+
+button {
+  padding: 10px 15px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  background: linear-gradient(135deg,#ff7e5f,#feb47b);
+  color: #fff;
+  font-weight: bold;
+  transition: transform 0.2s;
+}
+
+button:hover {transform: scale(1.05);}
+
+/* Gift list */
+ul {
+  list-style: none;
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+li {
+  background: rgba(255,255,255,0.05);
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: transform 0.3s, background 0.3s, box-shadow 0.3s;
+}
+
+li:hover {
+  transform: scale(1.05);
+  background: rgba(255,255,255,0.2);
+  box-shadow: 0 5px 15px rgba(255,255,255,0.2);
+}
+
+li a {
+  color: #fff;
+  text-decoration: none;
+  flex: 1;
+}
+
+li button {
+  padding: 5px 8px;
+  background: linear-gradient(135deg,#43cea2,#185a9d);
+}
+
+/* Scrollbar */
+ul::-webkit-scrollbar {
+  width: 8px;
+}
+
+ul::-webkit-scrollbar-thumb {
+  background: rgba(255,255,255,0.2);
+  border-radius: 10px;
+}
+
+/* Responsive */
+@media(max-width:768px){
+  .gift-panel {padding:20px; width:95%;}
+  h1 {font-size:1.5em;}
+}
+
+/* Parallax effect */
+.gift-panel {
+  perspective: 1000px;
+}
 </style>
 </head>
 <body>
 
-<canvas id="bg"></canvas>
-
-<div class="container">
-  <h1>Gift List</h1>
-  <div class="input-area">
-    <input id="giftInput" placeholder="Gift Name | URL">
-    <button id="addBtn">Add</button>
-  </div>
+<div class="gift-panel">
+  <h1>My Gift List</h1>
+  <form id="giftForm">
+    <input type="text" id="giftName" placeholder="Gift name" required>
+    <input type="text" id="giftURL" placeholder="Gift URL" required>
+    <button type="submit">Add</button>
+  </form>
   <ul id="giftList"></ul>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/three@0.181.0/build/three.min.js"></script>
+<canvas id="bgCanvas"></canvas>
 
 <script>
-const canvas=document.getElementById('bg');
-const scene=new THREE.Scene();
-const camera=new THREE.PerspectiveCamera(60,window.innerWidth/window.innerHeight,0.1,1000);
-camera.position.z=15;
-const renderer=new THREE.WebGLRenderer({canvas,antialias:true});
-renderer.setSize(window.innerWidth,window.innerHeight);
-renderer.setClearColor(0x0a0a0a); // dark background
+// === Gift list JS ===
+const giftForm = document.getElementById('giftForm');
+const giftList = document.getElementById('giftList');
 
-// particles
-const particlesGeo=new THREE.BufferGeometry();
-const count=4000;
-const positions=new Float32Array(count*3);
-for(let i=0;i<count;i++){
-  positions[i*3]=(Math.random()-0.5)*30;
-  positions[i*3+1]=(Math.random()-0.5)*30;
-  positions[i*3+2]=(Math.random()-0.5)*30;
-}
-particlesGeo.setAttribute('position',new THREE.BufferAttribute(positions,3));
-const particlesMat=new THREE.PointsMaterial({color:0xff8c42,size:0.12,transparent:true,opacity:0.7});
-const particles=new THREE.Points(particlesGeo,particlesMat);
-scene.add(particles);
+giftForm.addEventListener('submit', e => {
+  e.preventDefault();
+  const name = document.getElementById('giftName').value.trim();
+  const url = document.getElementById('giftURL').value.trim();
+  if(!name || !url) return;
 
-// floating cubes
-const cubeGeo=new THREE.BoxGeometry(0.7,0.7,0.7);
-const cubeMat=new THREE.MeshStandardMaterial({color:0xff8c42,transparent:true,opacity:0.5});
-const cubes=[];
-for(let i=0;i<30;i++){
-  const cube=new THREE.Mesh(cubeGeo,cubeMat);
-  cube.position.set((Math.random()-0.5)*25,(Math.random()-0.5)*25,(Math.random()-0.5)*25);
-  cube.rotationSpeed=Math.random()*0.01+0.003;
-  cubes.push(cube);
-  scene.add(cube);
-}
+  const li = document.createElement('li');
+  const a = document.createElement('a');
+  a.href = url;
+  a.target = "_blank";
+  a.textContent = name;
 
-// lights
-const ambientLight=new THREE.AmbientLight(0xffffff,0.7); scene.add(ambientLight);
-const pointLight=new THREE.PointLight(0xffffff,0.8); pointLight.position.set(10,10,10); scene.add(pointLight);
+  const btn = document.createElement('button');
+  btn.textContent = 'Remove';
+  btn.addEventListener('click', () => li.remove());
 
-function animate(){
-  requestAnimationFrame(animate);
-  particles.rotation.y+=0.0007; particles.rotation.x+=0.0005;
-  cubes.forEach(c=>{c.rotation.x+=c.rotationSpeed;c.rotation.y+=c.rotationSpeed;});
-  renderer.render(scene,camera);
-}
-animate();
+  li.appendChild(a);
+  li.appendChild(btn);
+  giftList.appendChild(li);
 
-window.addEventListener('resize',()=>{
-  renderer.setSize(window.innerWidth,window.innerHeight);
-  camera.aspect=window.innerWidth/window.innerHeight;
-  camera.updateProjectionMatrix();
+  giftForm.reset();
 });
 
-// gift list logic
-const input=document.getElementById('giftInput');
-const addBtn=document.getElementById('addBtn');
-const list=document.getElementById('giftList');
-addBtn.onclick=addGift;
-input.addEventListener('keypress',e=>{if(e.key==='Enter')addGift();});
+// === Three.js background ===
+let scene, camera, renderer, shapes = [];
+const canvas = document.getElementById('bgCanvas');
 
-function addGift(){
-  const val=input.value.trim();
-  if(!val) return;
-  const [name,url]=val.split('|').map(s=>s.trim());
-  const li=document.createElement('li');
-  li.innerHTML=`<a href="${url||'#'}" target="_blank">${name}</a> <button>&times;</button>`;
-  li.querySelector('button').onclick=()=>li.remove();
-  list.appendChild(li);
-  input.value='';
+function init() {
+  scene = new THREE.Scene();
+  camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+  camera.position.z = 5;
+
+  renderer = new THREE.WebGLRenderer({canvas, alpha:true});
+  renderer.setSize(window.innerWidth, window.innerHeight);
+
+  const ambient = new THREE.AmbientLight(0xffffff,0.7);
+  scene.add(ambient);
+
+  const point = new THREE.PointLight(0xffffff,1);
+  point.position.set(5,5,5);
+  scene.add(point);
+
+  const geometryTypes = [
+    new THREE.BoxGeometry(),
+    new THREE.SphereGeometry(0.3,32,32),
+    new THREE.TorusGeometry(0.3,0.1,16,100)
+  ];
+
+  for(let i=0;i<50;i++){
+    const geom = geometryTypes[Math.floor(Math.random()*geometryTypes.length)];
+    const mat = new THREE.MeshStandardMaterial({
+      color: new THREE.Color(Math.random(),Math.random(),Math.random()),
+      metalness:0.7,
+      roughness:0.2,
+      transparent:true,
+      opacity:0.7
+    });
+    const mesh = new THREE.Mesh(geom,mat);
+    mesh.position.set((Math.random()-0.5)*20,(Math.random()-0.5)*10,(Math.random()-0.5)*10);
+    mesh.rotation.set(Math.random()*Math.PI,Math.random()*Math.PI,Math.random()*Math.PI);
+    shapes.push(mesh);
+    scene.add(mesh);
+  }
 }
+
+function animate() {
+  requestAnimationFrame(animate);
+  shapes.forEach(s => {
+    s.rotation.x += 0.002;
+    s.rotation.y += 0.003;
+    s.position.y += Math.sin(Date.now()*0.001)*0.001;
+  });
+  renderer.render(scene,camera);
+}
+
+window.addEventListener('resize', ()=>{
+  camera.aspect = window.innerWidth/window.innerHeight;
+  camera.updateProjectionMatrix();
+  renderer.setSize(window.innerWidth, window.innerHeight);
+});
+
+init();
+animate();
+
+// Optional: subtle parallax on mouse move
+document.addEventListener('mousemove', e=>{
+  const x = (e.clientX/window.innerWidth -0.5)*2;
+  const y = (e.clientY/window.innerHeight -0.5)*2;
+  camera.position.x += (x - camera.position.x)*0.05;
+  camera.position.y += (-y - camera.position.y)*0.05;
+});
 </script>
+
 </body>
 </html>
