--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
 <style>
 /* Reset */
-* {margin:0; padding:0; box-sizing:border-box; font-family: 'Segoe UI', sans-serif;}
+* {margin:0; padding:0; box-sizing:border-box; font-family:'Segoe UI',sans-serif;}
 
 /* Fullscreen background canvas */
 body, html {
@@ -23,7 +23,7 @@ body, html {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(12px);
   background: rgba(255,255,255,0.05);
   border-radius: 20px;
   box-shadow: 0 10px 30px rgba(0,0,0,0.5);
@@ -32,6 +32,8 @@ body, html {
   max-width: 400px;
   color: #fff;
   z-index: 10;
+  perspective: 1000px;
+  transition: transform 0.2s ease;
 }
 
 /* Floating title */
@@ -74,16 +76,20 @@ button {
   background: linear-gradient(135deg,#ff7e5f,#feb47b);
   color: #fff;
   font-weight: bold;
-  transition: transform 0.2s;
+  transition: transform 0.2s, box-shadow 0.2s;
 }
 
-button:hover {transform: scale(1.05);}
+button:hover {
+  transform: scale(1.05);
+  box-shadow: 0 5px 15px rgba(255,255,255,0.3);
+}
 
 /* Gift list */
 ul {
   list-style: none;
   max-height: 300px;
   overflow-y: auto;
+  padding-right: 5px;
 }
 
 li {
@@ -98,7 +104,7 @@ li {
 }
 
 li:hover {
-  transform: scale(1.05);
+  transform: scale(1.03);
   background: rgba(255,255,255,0.2);
   box-shadow: 0 5px 15px rgba(255,255,255,0.2);
 }
@@ -107,18 +113,26 @@ li a {
   color: #fff;
   text-decoration: none;
   flex: 1;
+  margin-right: 10px;
 }
 
 li button {
   padding: 5px 8px;
+  border-radius: 8px;
+  border: none;
   background: linear-gradient(135deg,#43cea2,#185a9d);
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+li button:hover {
+  transform: scale(1.1);
 }
 
 /* Scrollbar */
 ul::-webkit-scrollbar {
   width: 8px;
 }
-
 ul::-webkit-scrollbar-thumb {
   background: rgba(255,255,255,0.2);
   border-radius: 10px;
@@ -128,11 +142,6 @@ ul::-webkit-scrollbar-thumb {
 @media(max-width:768px){
   .gift-panel {padding:20px; width:95%;}
   h1 {font-size:1.5em;}
-}
-
-/* Parallax effect */
-.gift-panel {
-  perspective: 1000px;
 }
 </style>
 </head>
@@ -165,6 +174,7 @@ giftForm.addEventListener('submit', e => {
   const a = document.createElement('a');
   a.href = url;
   a.target = "_blank";
+  a.rel = "noopener noreferrer"; // Security improvement
   a.textContent = name;
 
   const btn = document.createElement('button');
@@ -187,10 +197,11 @@ function init() {
   camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
   camera.position.z = 5;
 
-  renderer = new THREE.WebGLRenderer({canvas, alpha:true});
+  renderer = new THREE.WebGLRenderer({canvas, alpha:true, antialias:true});
   renderer.setSize(window.innerWidth, window.innerHeight);
+  renderer.setPixelRatio(window.devicePixelRatio);
 
-  const ambient = new THREE.AmbientLight(0xffffff,0.7);
+  const ambient = new THREE.AmbientLight(0xffffff,0.6);
   scene.add(ambient);
 
   const point = new THREE.PointLight(0xffffff,1);
@@ -239,7 +250,7 @@ window.addEventListener('resize', ()=>{
 init();
 animate();
 
-// Optional: subtle parallax on mouse move
+// Subtle parallax effect on mouse move
 document.addEventListener('mousemove', e=>{
   const x = (e.clientX/window.innerWidth -0.5)*2;
   const y = (e.clientY/window.innerHeight -0.5)*2;
