--- a/index.html
+++ b/index.html
@@ -6,144 +6,31 @@
 <title>Interactive Gift List</title>
 <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
 <style>
-/* Reset */
 * {margin:0; padding:0; box-sizing:border-box; font-family:'Segoe UI',sans-serif;}
-
-/* Fullscreen background canvas */
-body, html {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  background: #111;
-}
-
-/* Glass gift panel */
+body, html {width:100%; height:100%; overflow:hidden; background:#111;}
 .gift-panel {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  backdrop-filter: blur(12px);
-  background: rgba(255,255,255,0.05);
-  border-radius: 20px;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-  padding: 30px;
-  width: 90%;
-  max-width: 400px;
-  color: #fff;
-  z-index: 10;
-  perspective: 1000px;
-  transition: transform 0.2s ease;
+  position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);
+  backdrop-filter: blur(12px); background: rgba(255,255,255,0.05);
+  border-radius:20px; box-shadow:0 10px 30px rgba(0,0,0,0.5);
+  padding:30px; width:90%; max-width:400px; color:#fff; z-index:10;
+  perspective:1000px; transition: transform 0.2s ease;
 }
-
-/* Floating title */
-.gift-panel h1 {
-  text-align: center;
-  font-size: 2em;
-  margin-bottom: 20px;
-  animation: floatTitle 3s ease-in-out infinite alternate;
-}
-
-@keyframes floatTitle {
-  0% {transform: translateY(0);}
-  100% {transform: translateY(-10px);}
-}
-
-/* Input form */
-form {
-  display: flex;
-  gap: 10px;
-  margin-bottom: 20px;
-}
-
-input[type="text"] {
-  flex: 1;
-  padding: 10px;
-  border-radius: 10px;
-  border: 2px solid transparent;
-  outline: none;
-  background: rgba(255,255,255,0.1);
-  color: #fff;
-  transition: border-color 0.2s;
-}
-
-input::placeholder {color: #ddd;}
-
-button {
-  padding: 10px 15px;
-  border-radius: 10px;
-  border: none;
-  cursor: pointer;
-  background: linear-gradient(135deg,#ff7e5f,#feb47b);
-  color: #fff;
-  font-weight: bold;
-  transition: transform 0.2s, box-shadow 0.2s;
-}
-
-button:hover {
-  transform: scale(1.05);
-  box-shadow: 0 5px 15px rgba(255,255,255,0.3);
-}
-
-/* Gift list */
-ul {
-  list-style: none;
-  max-height: 300px;
-  overflow-y: auto;
-  padding-right: 5px;
-}
-
-li {
-  background: rgba(255,255,255,0.05);
-  margin-bottom: 10px;
-  padding: 10px;
-  border-radius: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  transition: transform 0.3s, background 0.3s, box-shadow 0.3s;
-}
-
-li:hover {
-  transform: scale(1.03);
-  background: rgba(255,255,255,0.2);
-  box-shadow: 0 5px 15px rgba(255,255,255,0.2);
-}
-
-li a {
-  color: #fff;
-  text-decoration: none;
-  flex: 1;
-  margin-right: 10px;
-}
-
-li button {
-  padding: 5px 8px;
-  border-radius: 8px;
-  border: none;
-  background: linear-gradient(135deg,#43cea2,#185a9d);
-  cursor: pointer;
-  transition: transform 0.2s;
-}
-
-li button:hover {
-  transform: scale(1.1);
-}
-
-/* Scrollbar */
-ul::-webkit-scrollbar {
-  width: 8px;
-}
-ul::-webkit-scrollbar-thumb {
-  background: rgba(255,255,255,0.2);
-  border-radius: 10px;
-}
-
-/* Responsive */
-@media(max-width:768px){
-  .gift-panel {padding:20px; width:95%;}
-  h1 {font-size:1.5em;}
-}
+.gift-panel h1 {text-align:center; font-size:2em; margin-bottom:20px; animation:floatTitle 3s ease-in-out infinite alternate;}
+@keyframes floatTitle {0%{transform:translateY(0);} 100%{transform:translateY(-10px);}}
+form {display:flex; gap:10px; margin-bottom:20px;}
+input[type="text"] {flex:1; padding:10px; border-radius:10px; border:2px solid transparent; outline:none; background:rgba(255,255,255,0.1); color:#fff; transition:border-color 0.2s;}
+input::placeholder {color:#ddd;}
+button {padding:10px 15px; border-radius:10px; border:none; cursor:pointer; background:linear-gradient(135deg,#ff7e5f,#feb47b); color:#fff; font-weight:bold; transition: transform 0.2s, box-shadow 0.2s;}
+button:hover {transform:scale(1.05); box-shadow:0 5px 15px rgba(255,255,255,0.3);}
+ul {list-style:none; max-height:300px; overflow-y:auto; padding-right:5px;}
+li {background:rgba(255,255,255,0.05); margin-bottom:10px; padding:10px; border-radius:10px; display:flex; justify-content:space-between; align-items:center; transition: transform 0.3s, background 0.3s, box-shadow 0.3s;}
+li:hover {transform:scale(1.03); background:rgba(255,255,255,0.2); box-shadow:0 5px 15px rgba(255,255,255,0.2);}
+li a {color:#fff; text-decoration:none; flex:1; margin-right:10px;}
+li button {padding:5px 8px; border-radius:8px; border:none; background:linear-gradient(135deg,#43cea2,#185a9d); cursor:pointer; transition: transform 0.2s;}
+li button:hover {transform:scale(1.1);}
+ul::-webkit-scrollbar {width:8px;}
+ul::-webkit-scrollbar-thumb {background: rgba(255,255,255,0.2); border-radius:10px;}
+@media(max-width:768px){.gift-panel{padding:20px;width:95%;}h1{font-size:1.5em;}}
 </style>
 </head>
 <body>
@@ -161,145 +48,76 @@ ul::-webkit-scrollbar-thumb {
 <canvas id="bgCanvas"></canvas>
 
 <script>
-// === Gift list JS with validation ===
+// Gift List JS
 const giftForm = document.getElementById('giftForm');
 const giftList = document.getElementById('giftList');
-
 giftForm.addEventListener('submit', e => {
   e.preventDefault();
   const nameInput = document.getElementById('giftName');
   const urlInput = document.getElementById('giftURL');
   const name = nameInput.value.trim();
   let url = urlInput.value.trim();
+  nameInput.style.borderColor=''; urlInput.style.borderColor='';
 
-  // Reset previous validation styles
-  nameInput.style.borderColor = '';
-  urlInput.style.borderColor = '';
+  if(!name){nameInput.style.borderColor='red'; nameInput.focus(); return;}
+  if(!url){urlInput.style.borderColor='red'; urlInput.focus(); return;}
+  if(!/^https?:\/\//i.test(url)) url = /^www\./i.test(url)?'https://'+url:'https://'+url;
+  try{ new URL(url); } catch{ urlInput.style.borderColor='red'; urlInput.focus(); return;}
+  const existing = Array.from(giftList.querySelectorAll('li a')).some(a=>a.textContent.toLowerCase()===name.toLowerCase());
+  if(existing){nameInput.style.borderColor='red'; nameInput.focus(); return;}
 
-  // Empty field validation
-  if (!name) { nameInput.style.borderColor='red'; nameInput.focus(); return; }
-  if (!url) { urlInput.style.borderColor='red'; urlInput.focus(); return; }
-
-  // Auto-fix common URL patterns
-  if (!/^https?:\/\//i.test(url)) {
-    url = /^www\./i.test(url) ? 'https://' + url : 'https://' + url;
-  }
-
-  // Validate URL
-  try { new URL(url); } catch { urlInput.style.borderColor='red'; urlInput.focus(); return; }
-
-  // Duplicate name check
-  const existing = Array.from(giftList.querySelectorAll('li a'))
-                       .some(a => a.textContent.toLowerCase() === name.toLowerCase());
-  if (existing) { nameInput.style.borderColor='red'; nameInput.focus(); return; }
-
-  const li = document.createElement('li');
-  const a = document.createElement('a');
-  a.href = url;
-  a.target = "_blank";
-  a.rel = "noopener noreferrer";
-  a.textContent = name;
-
-  const btn = document.createElement('button');
-  btn.textContent = 'Remove';
-  btn.addEventListener('click', () => li.remove());
-
-  li.appendChild(a);
-  li.appendChild(btn);
-  giftList.appendChild(li);
-
+  const li=document.createElement('li');
+  const a=document.createElement('a'); a.href=url; a.target="_blank"; a.rel="noopener noreferrer"; a.textContent=name;
+  const btn=document.createElement('button'); btn.textContent='Remove'; btn.addEventListener('click',()=>li.remove());
+  li.appendChild(a); li.appendChild(btn); giftList.appendChild(li);
   giftForm.reset();
 });
 
-// === Three.js Premium Background ===
-let scene, camera, renderer;
-const ribbons = [];
-const particles = [];
-const canvas = document.getElementById('bgCanvas');
-
-function init() {
-  scene = new THREE.Scene();
-  camera = new THREE.PerspectiveCamera(60, window.innerWidth/window.innerHeight, 0.1, 1000);
-  camera.position.z = 10;
-
-  renderer = new THREE.WebGLRenderer({canvas, alpha:true, antialias:true});
-  renderer.setSize(window.innerWidth, window.innerHeight);
+// Festive Three.js Background
+let scene,camera,renderer;
+const particles=[];
+const canvas=document.getElementById('bgCanvas');
+function init(){
+  scene=new THREE.Scene();
+  camera=new THREE.PerspectiveCamera(60,window.innerWidth/window.innerHeight,0.1,1000);
+  camera.position.z=10;
+  renderer=new THREE.WebGLRenderer({canvas,alpha:true,antialias:true});
+  renderer.setSize(window.innerWidth,window.innerHeight);
   renderer.setPixelRatio(window.devicePixelRatio);
 
-  // Lights
-  const ambient = new THREE.AmbientLight(0xffffff,0.5);
-  scene.add(ambient);
-  const point = new THREE.PointLight(0xffffff,1);
-  point.position.set(10,10,10);
-  scene.add(point);
+  const ambient=new THREE.AmbientLight(0xffffff,0.6); scene.add(ambient);
 
-  // Ribbons
-  for(let i=0;i<12;i++){
-    const curve = new THREE.CatmullRomCurve3([
-      new THREE.Vector3(Math.random()*10-5, Math.random()*10-5, Math.random()*10-5),
-      new THREE.Vector3(Math.random()*10-5, Math.random()*10-5, Math.random()*10-5),
-      new THREE.Vector3(Math.random()*10-5, Math.random()*10-5, Math.random()*10-5),
-      new THREE.Vector3(Math.random()*10-5, Math.random()*10-5, Math.random()*10-5)
-    ]);
-    const geometry = new THREE.TubeGeometry(curve, 64, 0.05, 8, false);
-    const material = new THREE.MeshStandardMaterial({
-      color: new THREE.Color(Math.random(),Math.random(),Math.random()),
-      transparent:true,
-      opacity:0.5,
-      metalness:0.6,
-      roughness:0.2
-    });
-    const ribbon = new THREE.Mesh(geometry, material);
-    ribbon.userData = {angle: Math.random()*Math.PI*2, speed:0.002+Math.random()*0.002};
-    ribbons.push(ribbon);
-    scene.add(ribbon);
-  }
-
-  // Particles
-  const particleGeometry = new THREE.SphereGeometry(0.03,8,8);
-  const particleMaterial = new THREE.MeshStandardMaterial({color:0xffffff, transparent:true, opacity:0.4});
-  for(let i=0;i<150;i++){
-    const p = new THREE.Mesh(particleGeometry, particleMaterial.clone());
-    p.position.set(Math.random()*20-10, Math.random()*20-10, Math.random()*20-10);
-    p.userData = {speed: Math.random()*0.002+0.001};
-    particles.push(p);
-    scene.add(p);
+  const particleCount=250;
+  for(let i=0;i<particleCount;i++){
+    const geometry=new THREE.SphereGeometry(Math.random()*0.06+0.02,8,8);
+    const material=new THREE.MeshStandardMaterial({color:new THREE.Color(1,0.8+Math.random()*0.2,0.5+Math.random()*0.2), transparent:true, opacity:0.4+Math.random()*0.3});
+    const p=new THREE.Mesh(geometry,material);
+    p.position.set(Math.random()*20-10,Math.random()*15-7.5,Math.random()*20-10);
+    p.userData={speed:0.002+Math.random()*0.003, sway:Math.random()*0.5};
+    particles.push(p); scene.add(p);
   }
 }
-
-function animate() {
+function animate(){
   requestAnimationFrame(animate);
-
-  ribbons.forEach(ribbon=>{
-    ribbon.rotation.y += ribbon.userData.speed;
-    ribbon.rotation.x += ribbon.userData.speed*0.5;
-  });
-
   particles.forEach(p=>{
-    p.position.y += p.userData.speed;
-    if(p.position.y > 10) p.position.y = -10;
+    p.position.y+=p.userData.speed;
+    p.position.x+=Math.sin(Date.now()*0.001+p.userData.sway)*0.002;
+    if(p.position.y>10) p.position.y=-10;
   });
-
   renderer.render(scene,camera);
 }
-
-// Parallax
-document.addEventListener('mousemove', e=>{
-  const x = (e.clientX/window.innerWidth -0.5)*2;
-  const y = (e.clientY/window.innerHeight -0.5)*2;
-  camera.position.x += (x*5 - camera.position.x)*0.05;
-  camera.position.y += (-y*5 - camera.position.y)*0.05;
+document.addEventListener('mousemove',e=>{
+  const x=(e.clientX/window.innerWidth-0.5)*2;
+  const y=(e.clientY/window.innerHeight-0.5)*2;
+  camera.position.x+=(x*5-camera.position.x)*0.05;
+  camera.position.y+=(-y*5-camera.position.y)*0.05;
 });
-
-// Resize
-window.addEventListener('resize', ()=>{
-  camera.aspect = window.innerWidth/window.innerHeight;
+window.addEventListener('resize',()=>{
+  camera.aspect=window.innerWidth/window.innerHeight;
   camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth, window.innerHeight);
+  renderer.setSize(window.innerWidth,window.innerHeight);
 });
-
-init();
-animate();
+init(); animate();
 </script>
 
 </body>
