--- a/index.html
+++ b/index.html
@@ -4,138 +4,300 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Interactive Gift List</title>
-<script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
+
 <style>
-* {margin:0; padding:0; box-sizing:border-box; font-family:'Segoe UI',sans-serif;}
-body, html {width:100%; height:100%; overflow:hidden; background:#111;}
-.gift-panel {
-  position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);
-  backdrop-filter: blur(12px); background: rgba(255,255,255,0.05);
-  border-radius:20px; box-shadow:0 10px 30px rgba(0,0,0,0.5);
-  padding:30px; width:90%; max-width:400px; color:#fff; z-index:10;
-  perspective:1000px; transition: transform 0.2s ease;
+/* RESET */
+* { margin:0; padding:0; box-sizing:border-box; font-family: 'Segoe UI', sans-serif; }
+
+/* Prevent page scroll */
+html, body {
+  width:100%;
+  height:100%;
+  overflow:hidden;
+  background:#111;
 }
-.gift-panel h1 {text-align:center; font-size:2em; margin-bottom:20px; animation:floatTitle 3s ease-in-out infinite alternate;}
-@keyframes floatTitle {0%{transform:translateY(0);} 100%{transform:translateY(-10px);}}
-form {display:flex; gap:10px; margin-bottom:20px;}
-input[type="text"] {flex:1; padding:10px; border-radius:10px; border:2px solid transparent; outline:none; background:rgba(255,255,255,0.1); color:#fff; transition:border-color 0.2s;}
-input::placeholder {color:#ddd;}
-button {padding:10px 15px; border-radius:10px; border:none; cursor:pointer; background:linear-gradient(135deg,#ff7e5f,#feb47b); color:#fff; font-weight:bold; transition: transform 0.2s, box-shadow 0.2s;}
-button:hover {transform:scale(1.05); box-shadow:0 5px 15px rgba(255,255,255,0.3);}
-ul {list-style:none; max-height:300px; overflow-y:auto; padding-right:5px;}
-li {background:rgba(255,255,255,0.05); margin-bottom:10px; padding:10px; border-radius:10px; display:flex; justify-content:space-between; align-items:center; transition: transform 0.3s, background 0.3s, box-shadow 0.3s;}
-li:hover {transform:scale(1.03); background:rgba(255,255,255,0.2); box-shadow:0 5px 15px rgba(255,255,255,0.2);}
-li a {color:#fff; text-decoration:none; flex:1; margin-right:10px;}
-li button {padding:5px 8px; border-radius:8px; border:none; background:linear-gradient(135deg,#43cea2,#185a9d); cursor:pointer; transition: transform 0.2s;}
-li button:hover {transform:scale(1.1);}
-ul::-webkit-scrollbar {width:8px;}
-ul::-webkit-scrollbar-thumb {background: rgba(255,255,255,0.2); border-radius:10px;}
-@media(max-width:768px){.gift-panel{padding:20px;width:95%;}h1{font-size:1.5em;}}
+
+/* === BACKGROUND GIFT BOXES === */
+#gift-bg {
+  position:fixed;
+  inset:0;
+  overflow:hidden;
+  z-index:0;
+  pointer-events:none;
+  perspective:1200px;
+}
+
+/* Each floating gift box */
+.giftbox {
+  position:absolute;
+  width:80px;
+  height:80px;
+  transform-style:preserve-3d;
+  animation:float 12s ease-in-out infinite;
+  opacity:0.85;
+}
+
+/* Box faces */
+.box-face {
+  position:absolute;
+  width:80px;
+  height:80px;
+  background:var(--color);
+  transform-style:preserve-3d;
+  box-shadow:inset 0 0 20px rgba(0,0,0,0.2);
+}
+
+.front  { transform:translateZ(40px); }
+.back   { transform:rotateY(180deg) translateZ(40px); }
+.right  { transform:rotateY(90deg) translateZ(40px); }
+.left   { transform:rotateY(-90deg) translateZ(40px); }
+.top    { transform:rotateX(90deg) translateZ(40px); }
+.bottom { transform:rotateX(-90deg) translateZ(40px); }
+
+/* Lid is slightly bigger */
+.lid-face {
+  position:absolute;
+  width:86px;
+  height:20px;
+  background:var(--lid);
+  transform-style:preserve-3d;
+  box-shadow:inset 0 0 15px rgba(0,0,0,0.25);
+}
+
+.lid-front  { transform:translateZ(43px) translateY(-40px); }
+.lid-back   { transform:rotateY(180deg) translateZ(43px) translateY(-40px); }
+.lid-right  { transform:rotateY(90deg) translateZ(43px) translateY(-40px); }
+.lid-left   { transform:rotateY(-90deg) translateZ(43px) translateY(-40px); }
+.lid-top    { transform:rotateX(90deg) translateZ(43px) translateY(-40px); }
+
+/* Ribbons */
+.ribbon-v, .ribbon-h {
+  position:absolute;
+  background:var(--ribbon);
+}
+
+.ribbon-v {
+  width:12px; height:80px;
+  left:34px; top:0;
+}
+
+.ribbon-h {
+  width:80px; height:12px;
+  top:34px; left:0;
+}
+
+/* Floating animation */
+@keyframes float {
+  0%   { transform:translate3d(0,0,0) rotateX(0) rotateY(0); }
+  50%  { transform:translate3d(0,-40px,0) rotateX(25deg) rotateY(35deg); }
+  100% { transform:translate3d(0,0,0) rotateX(0) rotateY(0); }
+}
+
+/* === MAIN PANEL === */
+.gift-panel {
+  position:absolute;
+  top:50%; left:50%;
+  transform:translate(-50%, -50%);
+  backdrop-filter:blur(10px);
+  background:rgba(255,255,255,0.05);
+  border-radius:20px;
+  padding:30px;
+  width:90%;
+  max-width:400px;
+  color:white;
+  z-index:10;
+  box-shadow:0 10px 30px rgba(0,0,0,0.5);
+}
+
+/* Title */
+.gift-panel h1 {
+  text-align:center;
+  margin-bottom:20px;
+  font-size:2em;
+  animation:floatTitle 3s ease-in-out infinite alternate;
+}
+
+@keyframes floatTitle {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-10px); }
+}
+
+/* Form */
+form {
+  display:flex;
+  gap:10px;
+  margin-bottom:20px;
+}
+
+input[type="text"] {
+  flex:1;
+  padding:10px;
+  border-radius:10px;
+  border:none;
+  outline:none;
+  background:rgba(255,255,255,0.1);
+  color:white;
+}
+
+input::placeholder { color:#ccc; }
+
+button {
+  padding:10px 15px;
+  border:none;
+  border-radius:10px;
+  background:linear-gradient(135deg,#ff7e5f,#feb47b);
+  color:white;
+  font-weight:bold;
+  cursor:pointer;
+  transition:transform .2s;
+}
+
+button:hover { transform:scale(1.05); }
+
+/* Gift list */
+ul {
+  list-style:none;
+  max-height:300px;
+  overflow-y:auto;
+}
+
+li {
+  background:rgba(255,255,255,0.05);
+  margin-bottom:10px;
+  padding:10px;
+  border-radius:10px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  transition:.3s;
+}
+
+li:hover {
+  transform:scale(1.05);
+  background:rgba(255,255,255,0.15);
+}
+
+li a {
+  color:white;
+  text-decoration:none;
+  flex:1;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  white-space:nowrap;
+}
+
+li button {
+  padding:5px 8px;
+  background:linear-gradient(135deg,#43cea2,#185a9d);
+}
+
+/* Scrollbar */
+ul::-webkit-scrollbar { width:8px; }
+ul::-webkit-scrollbar-thumb {
+  background:rgba(255,255,255,0.2);
+  border-radius:10px;
+}
+
+@media(max-width:768px){
+  .gift-panel { padding:20px; width:95%; }
+  h1 { font-size:1.5em; }
+}
 </style>
 </head>
+
 <body>
 
+<!-- BACKGROUND BOXES -->
+<div id="gift-bg"></div>
+
+<!-- MAIN PANEL -->
 <div class="gift-panel">
   <h1>My Gift List</h1>
+
   <form id="giftForm">
     <input type="text" id="giftName" placeholder="Gift name" required>
     <input type="text" id="giftURL" placeholder="Gift URL" required>
     <button type="submit">Add</button>
   </form>
+
   <ul id="giftList"></ul>
 </div>
 
-<canvas id="bgCanvas"></canvas>
-
 <script>
-// Gift List JS
-const giftForm = document.getElementById('giftForm');
-const giftList = document.getElementById('giftList');
-giftForm.addEventListener('submit', e => {
+/* === SPAWN CSS 3D GIFT BOXES === */
+const bg = document.getElementById("gift-bg");
+
+const colors = [
+  { box:"#ff7675", lid:"#d63031", ribbon:"#ffeaa7" },
+  { box:"#55efc4", lid:"#00b894", ribbon:"#ffeaa7" },
+  { box:"#74b9ff", lid:"#0984e3", ribbon:"#ffeaa7" },
+  { box:"#a29bfe", lid:"#6c5ce7", ribbon:"#ffeaa7" },
+  { box:"#fab1a0", lid:"#e17055", ribbon:"#ffeaa7" },
+];
+
+function createGiftBox(){
+  const wrap = document.createElement("div");
+  wrap.className = "giftbox";
+
+  const c = colors[Math.floor(Math.random()*colors.length)];
+  wrap.style.setProperty("--color", c.box);
+  wrap.style.setProperty("--lid", c.lid);
+  wrap.style.setProperty("--ribbon", c.ribbon);
+
+  wrap.style.left = Math.random()*100 + "%";
+  wrap.style.top  = Math.random()*100 + "%";
+  wrap.style.transform = "translateZ("+(Math.random()*400 - 200)+"px)";
+
+  wrap.innerHTML = `
+    <div class="box-face front"></div>
+    <div class="box-face back"></div>
+    <div class="box-face right"></div>
+    <div class="box-face left"></div>
+    <div class="box-face top"></div>
+    <div class="box-face bottom"></div>
+
+    <div class="lid-face lid-front"></div>
+    <div class="lid-face lid-back"></div>
+    <div class="lid-face lid-right"></div>
+    <div class="lid-face lid-left"></div>
+    <div class="lid-face lid-top"></div>
+
+    <div class="ribbon-v"></div>
+    <div class="ribbon-h"></div>
+  `;
+
+  bg.appendChild(wrap);
+}
+
+for(let i=0; i<25; i++) createGiftBox();
+
+/* === GIFT LIST === */
+const giftForm = document.getElementById("giftForm");
+const giftList = document.getElementById("giftList");
+
+giftForm.addEventListener("submit", e => {
   e.preventDefault();
-  const nameInput = document.getElementById('giftName');
-  const urlInput = document.getElementById('giftURL');
-  const name = nameInput.value.trim();
-  let url = urlInput.value.trim();
-  nameInput.style.borderColor=''; urlInput.style.borderColor='';
+  const name = document.getElementById("giftName").value.trim();
+  const url  = document.getElementById("giftURL").value.trim();
+  if(!name || !url) return;
 
-  if(!name){nameInput.style.borderColor='red'; nameInput.focus(); return;}
-  if(!url){urlInput.style.borderColor='red'; urlInput.focus(); return;}
-  if(!/^https?:\/\//i.test(url)) url = /^www\./i.test(url)?'https://'+url:'https://'+url;
-  try{ new URL(url); } catch{ urlInput.style.borderColor='red'; urlInput.focus(); return;}
-  const existing = Array.from(giftList.querySelectorAll('li a')).some(a=>a.textContent.toLowerCase()===name.toLowerCase());
-  if(existing){nameInput.style.borderColor='red'; nameInput.focus(); return;}
+  const li = document.createElement("li");
 
-  const li=document.createElement('li');
-  const a=document.createElement('a'); a.href=url; a.target="_blank"; a.rel="noopener noreferrer"; a.textContent=name;
-  const btn=document.createElement('button'); btn.textContent='Remove'; btn.addEventListener('click',()=>li.remove());
-  li.appendChild(a); li.appendChild(btn); giftList.appendChild(li);
+  const a = document.createElement("a");
+  a.href = url.startsWith("http") ? url : "https://" + url;
+  a.target = "_blank";
+  a.textContent = name;
+
+  const btn = document.createElement("button");
+  btn.textContent = "Remove";
+  btn.onclick = () => li.remove();
+
+  li.appendChild(a);
+  li.appendChild(btn);
+  giftList.appendChild(li);
+
   giftForm.reset();
 });
-
-// Three.js 3D Gift Boxes Background
-let scene, camera, renderer;
-const boxes=[];
-const canvas=document.getElementById('bgCanvas');
-
-function randomColor(){
-  const colors=[0xff6f61,0xffd700,0x6a5acd,0xff69b4,0x20b2aa];
-  return colors[Math.floor(Math.random()*colors.length)];
-}
-
-function init(){
-  scene=new THREE.Scene();
-  camera=new THREE.PerspectiveCamera(60,window.innerWidth/window.innerHeight,0.1,1000);
-  camera.position.z=12;
-
-  renderer=new THREE.WebGLRenderer({canvas,alpha:true,antialias:true});
-  renderer.setSize(window.innerWidth,window.innerHeight);
-  renderer.setPixelRatio(window.devicePixelRatio);
-
-  const ambient=new THREE.AmbientLight(0xffffff,0.6); scene.add(ambient);
-  const point=new THREE.PointLight(0xffffff,1); point.position.set(10,10,10); scene.add(point);
-
-  // Create gift boxes
-  const boxCount=30;
-  for(let i=0;i<boxCount;i++){
-    const size=Math.random()*0.5+0.3;
-    const geometry=new THREE.BoxGeometry(size,size,size);
-    const material=new THREE.MeshStandardMaterial({color:randomColor(), metalness:0.5, roughness:0.3});
-    const box=new THREE.Mesh(geometry, material);
-    box.position.set(Math.random()*20-10, Math.random()*15-7.5, Math.random()*20-10);
-    box.rotation.set(Math.random()*Math.PI, Math.random()*Math.PI, Math.random()*Math.PI);
-    box.userData={speed:0.002+Math.random()*0.003, sway:Math.random()*0.5};
-    boxes.push(box); scene.add(box);
-  }
-}
-
-function animate(){
-  requestAnimationFrame(animate);
-  boxes.forEach(box=>{
-    box.position.y+=box.userData.speed;
-    box.position.x+=Math.sin(Date.now()*0.001+box.userData.sway)*0.002;
-    if(box.position.y>10) box.position.y=-10;
-    box.rotation.x+=0.002; box.rotation.y+=0.003;
-  });
-  renderer.render(scene,camera);
-}
-
-// Mouse parallax
-document.addEventListener('mousemove', e=>{
-  const x=(e.clientX/window.innerWidth-0.5)*2;
-  const y=(e.clientY/window.innerHeight-0.5)*2;
-  camera.position.x+=(x*5-camera.position.x)*0.05;
-  camera.position.y+=(-y*5-camera.position.y)*0.05;
-});
-
-// Resize
-window.addEventListener('resize',()=>{
-  camera.aspect=window.innerWidth/window.innerHeight;
-  camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth,window.innerHeight);
-});
-
-init(); animate();
 </script>
 
 </body>
